# reporter_demo

./: README.md  package.json  vite.config.js
src-tauri/: .gitignore  Cargo.toml  build.rs  config.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/director/: mod.rs  source.rs
src-tauri/src/mpeg/: ffmpeg_tool.rs  mod.rs
src-tauri/src/news/: mod.rs  pengpai_news.rs
src-tauri/src/subtitle/: mod.rs  srt.rs
src-tauri/src/tts/: ali_tts.rs  mod.rs
src-tauri/src/video/: junior_editor.rs  mod.rs
src/lib/components/: gen-video.svelte  news-window.svelte
src/lib/models/: newsTitle.ts
src/routes/: +page.svelte
